# betterproto-demo

./: .mypy.ini  .pylintrc  README.md  pyproject.toml
betterproto_demo/: grpc_client.py  grpc_server.py
data_gen/: __init__.py
graphql_ariadne/: README.md  graphql_server.py
graphql_common/: graphql_client_structured.py
graphql_strawberry/: README.md  graphql_client_raw.py  graphql_client_structured.py  graphql_server.py
grpc_bench/: grpc_server.py
grpc_betterproto/: README.md  grpc_client.py  grpc_client_simple.py  grpc_client_streaming.py  grpc_server.py  helloworld_grpc.py
hello/: async_greeter_client.py  async_greeter_server.py  client.py  generate.sh  greeter_server.py  helloworld.proto  helloworld.py  helloworld_grpc.py  helloworld_pb2.py  helloworld_pb2_grpc.py  server.py
