[tool.poetry]
name = "betterproto-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

packages = [
    { include="hello", from="." },
]

[tool.poetry.dependencies]
python = "^3.8"
betterproto = {extras = ["compiler"], version = "^1.2.5"}
Faker = "^4.14.0"
orjson = "^3.4.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
grpc-stubs = "^1.24.2"
grpcio = "^1.33.2"
grpcio-tools = "^1.33.2"
pylint = "^2.6.0"
mypy = "^0.790"
pytest = "^6.1.2"

[tool.poetry.scripts]
server = 'hello.server:run'
client = 'hello.client:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"