[tool.poetry]
name = "betterproto-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

packages = [
    { include="betterproto_demo", from="." },
]

[tool.poetry.dependencies]
python = "^3.9"
betterproto = {extras = ["compiler"], version = "^1.2.5"}
Faker = "^4.14.0"
orjson = "^3.4.3"
tqdm = "^4.51.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
grpc-stubs = "^1.24.2"
grpcio = "^1.33.2"
grpcio-tools = "^1.33.2"
pylint = "^2.6.0"
mypy = "^0.790"
pytest = "^6.1.2"

[tool.poetry.scripts]
grpc-server = 'betterproto_demo.grpc_server:run'
grpc-client = 'betterproto_demo.grpc_client:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
